src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Mobile__c</fullName>
        <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
        <formula>IF(MobilePhone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ MobilePhone+&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
        <label>Click-to-Call Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Phone__c</fullName>
        <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
        <formula>IF(Phone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ Phone +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
        <label>Click-to-Call Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Skype__c</fullName>
        <formula>IF( LEN(ClickToDial__Skype_Username__c) &gt; 0, HYPERLINK(&quot;skype:&quot; &amp; ClickToDial__Skype_Username__c &amp; &quot;?call&quot;, ClickToDial__Skype_Username__c , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ ClickToDial__Skype_Username__c +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,false,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;), &quot;No Skype ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click-to-Call Skype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Country_Code__c</fullName>
        <description>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</description>
        <inlineHelpText>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</inlineHelpText>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Skype_Username__c</fullName>
        <label>Skype Username</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>primary</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>